add pad_until_exact and wait_until_exact scripted schedule calls (#2384)
